--- a/projects/final/jazmine.html
+++ b/projects/final/jazmine.html
@@ -10,129 +10,128 @@
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   <link href='pagestyles.css' rel='stylesheet'>
   <style>
-      .navbar {
-          overflow: hidden;
-          background-color: #333;
-          font-family: 'Roboto', Helvetica, sans-serif;
-      }
+    .navbar {
+      overflow: hidden;
+      background-color: #333;
+      font-family: 'Roboto', Helvetica, sans-serif;
+    }
 
-      .navbar a {
-          float: left;
-          font-size: 16px;
-          color: white;
-          text-align: center;
-          padding: 7px 16px;
-          text-decoration: none;
-      }
+    .navbar a {
+      float: left;
+      font-size: 16px;
+      color: white;
+      text-align: center;
+      padding: 7px 16px;
+      text-decoration: none;
+    }
 
-      .dropdown {
-          float: right;
-          overflow: hidden;
-      }
+    .dropdown {
+      float: right;
+      overflow: hidden;
+    }
 
-      .dropdown .dropbtn {
-          cursor: pointer;
-          font-size: 16px;
-          border: none;
-          outline: none;
-          color: white;
-          padding: 10px 12px;
-          background-color: inherit;
-          font-family: inherit;
-          margin: 0;
-      }
+    .dropdown .dropbtn {
+      cursor: pointer;
+      font-size: 16px;
+      border: none;
+      outline: none;
+      color: white;
+      padding: 10px 12px;
+      background-color: inherit;
+      font-family: inherit;
+      margin: 0;
+    }
 
-      .navbar a:hover,
-      .dropdown:hover .dropbtn,
-      .dropbtn:focus {
-          background-color: skyblue;
-      }
+    .navbar a:hover,
+    .dropdown:hover .dropbtn,
+    .dropbtn:focus {
+      background-color: skyblue;
+    }
 
-      .dropdown-content {
-          display: none;
-          position: absolute;
-          background-color: #f9f9f9;
-          min-width: 160px;
-          box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-          z-index: 1;
-      }
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f9f9f9;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      z-index: 1;
+    }
 
-      .dropdown-content a {
-          float: none;
-          color: black;
-          padding: 12px 16px;
-          text-decoration: none;
-          display: block;
-          text-align: left;
-      }
+    .dropdown-content a {
+      float: none;
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+      text-align: left;
+    }
 
-      .dropdown-content a:hover {
-          background-color: #ddd;
-      }
+    .dropdown-content a:hover {
+      background-color: #ddd;
+    }
 
-      .show {
-          display: block;
-      }
-
+    .show {
+      display: block;
+    }
   </style>
 </head>
 
 <body>
   <div class="navbar">
-      <div class="dropdown">
-          <button class="dropbtn" onclick="myFunction()">More Info
+    <div class="dropdown">
+      <button class="dropbtn" onclick="myFunction()">More Info
     <i class="fa fa-caret-down"></i>
   </button>
-          <div class="dropdown-content" id="myDropdown">
-              <a href="https://vivmokona.github.io/des157/proto2/index.html">Home</a>
-              <a href="https://fxtzhou.github.io/des157/projects/final/index.html">About</a>
-              <a class="active" href="#">Profile</a>
-              <a href="#contact">Contact</a>
-          </div>
+      <div class="dropdown-content" id="myDropdown">
+        <a href="https://vivmokona.github.io/des157/final/index.html">Home</a>
+        <a href="https://fxtzhou.github.io/des157/projects/final/index.html">About</a>
+        <a class="active" href="#">Profile</a>
+        <a href="#contact">Contact</a>
       </div>
+    </div>
   </div>
   <section>
     <div class="profile">
-    <img src="photos/jazmine.jpg" width="200px">
-    <h1>Jazmine Escobar-Solorio</h1>
-    <h2>Fashion/Graphics/Interior Design</h2>
-    <h2>95127</h2>
-    <h2><a href="https://jescobarsolorio.wixsite.com/portfolio">Portfolio</a></h2>
-    <h2><a href="instagram.com/escobar_jazmine"> <i class="fab fa-instagram"></i></a></h2>
-  </div>
+      <img src="photos/jazmine.jpg" width="200px">
+      <h1>Jazmine Escobar-Solorio</h1>
+      <h2>Fashion/Graphics/Interior Design</h2>
+      <h2>95127</h2>
+      <h2><a href="https://jescobarsolorio.wixsite.com/portfolio">Portfolio</a></h2>
+      <h2><a href="https://instagram.com/escobar_jazmine"> <i class="fab fa-instagram"></i></a></h2>
+    </div>
 
-  <article>
-    <h3>What intrigued you to Design & why did you choose the field you are in now?</h3>
-    <p>What intrigued me with design is that it has the power to change the world. Design is not just about aesthetic pleasure, it can be redesigned to help people.</p>
+    <article>
+      <h3>What intrigued you to Design & why did you choose the field you are in now?</h3>
+      <p>What intrigued me with design is that it has the power to change the world. Design is not just about aesthetic pleasure, it can be redesigned to help people.</p>
 
-    <h3>What have been your biggest struggles of your career?</h3>
-    <p>Confidence in my designs and lack of time to execute passion projects.</p>
+      <h3>What have been your biggest struggles of your career?</h3>
+      <p>Confidence in my designs and lack of time to execute passion projects.</p>
 
-    <h3>What have your experiences been like as a person of color in the design industry? Does those experiences shape how you solve design-related problems?</h3>
-    <p>As a first-generation Latina, I feel like I have been exposed to a lot of different obstacles in college, but those experiences have helped me become a more well-rounded person. The design industry can be competitive, but my experiences and background as sources of inspiration be have helped guide me with design-related problems.</p>
+      <h3>What have your experiences been like as a person of color in the design industry? Does those experiences shape how you solve design-related problems?</h3>
+      <p>As a first-generation Latina, I feel like I have been exposed to a lot of different obstacles in college, but those experiences have helped me become a more well-rounded person. The design industry can be competitive, but my experiences and background
+        as sources of inspiration be have helped guide me with design-related problems.</p>
 
-    <h3>How can design be more accommodating to underrepresented populations of people?</h3>
-    <p>Because of underrepresentation, a lot of things in society were made by people not of color, and don't necessarily accommodate the needs to others. With design, they can be redesigned be more inclusive.</p>
-        </article>
-</section>
+      <h3>How can design be more accommodating to underrepresented populations of people?</h3>
+      <p>Because of underrepresentation, a lot of things in society were made by people not of color, and don't necessarily accommodate the needs to others. With design, they can be redesigned be more inclusive.</p>
+    </article>
+  </section>
 
-<script>
+  <script>
     /* When the user clicks on the button, toggle between hiding and showing the dropdown content */
     function myFunction() {
-        document.getElementById("myDropdown").classList.toggle("show");
+      document.getElementById("myDropdown").classList.toggle("show");
     }
 
     // Close the dropdown if the user clicks outside of it
     window.onclick = function(e) {
-        if (!e.target.matches('.dropbtn')) {
-            var myDropdown = document.getElementById("myDropdown");
-            if (myDropdown.classList.contains('show')) {
-                myDropdown.classList.remove('show');
-            }
+      if (!e.target.matches('.dropbtn')) {
+        var myDropdown = document.getElementById("myDropdown");
+        if (myDropdown.classList.contains('show')) {
+          myDropdown.classList.remove('show');
         }
+      }
     }
-
-</script>
+  </script>
 
   <footer>
     <a href="">About</a>
