--- a/projects/final/vivian.html
+++ b/projects/final/vivian.html
@@ -11,113 +11,118 @@
   <link href='pagestyles.css' rel='stylesheet'>
 
   <style>
-      .navbar {
-          overflow: hidden;
-          background-color: #333;
-          font-family: 'Roboto', Helvetica, sans-serif;
-      }
+    .navbar {
+      overflow: hidden;
+      background-color: #333;
+      font-family: 'Roboto', Helvetica, sans-serif;
+    }
 
-      .navbar a {
-          float: left;
-          font-size: 16px;
-          color: white;
-          text-align: center;
-          padding: 7px 16px;
-          text-decoration: none;
-      }
+    .navbar a {
+      float: left;
+      font-size: 16px;
+      color: white;
+      text-align: center;
+      padding: 7px 16px;
+      text-decoration: none;
+    }
 
-      .dropdown {
-          float: right;
-          overflow: hidden;
-      }
+    .dropdown {
+      float: right;
+      overflow: hidden;
+    }
 
-      .dropdown .dropbtn {
-          cursor: pointer;
-          font-size: 16px;
-          border: none;
-          outline: none;
-          color: white;
-          padding: 10px 12px;
-          background-color: inherit;
-          font-family: inherit;
-          margin: 0;
-      }
+    .dropdown .dropbtn {
+      cursor: pointer;
+      font-size: 16px;
+      border: none;
+      outline: none;
+      color: white;
+      padding: 10px 12px;
+      background-color: inherit;
+      font-family: inherit;
+      margin: 0;
+    }
 
-      .navbar a:hover,
-      .dropdown:hover .dropbtn,
-      .dropbtn:focus {
-          background-color: skyblue;
-      }
+    .navbar a:hover,
+    .dropdown:hover .dropbtn,
+    .dropbtn:focus {
+      background-color: skyblue;
+    }
 
-      .dropdown-content {
-          display: none;
-          position: absolute;
-          background-color: #f9f9f9;
-          min-width: 160px;
-          box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-          z-index: 1;
-      }
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f9f9f9;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+      z-index: 1;
+    }
 
-      .dropdown-content a {
-          float: none;
-          color: black;
-          padding: 12px 16px;
-          text-decoration: none;
-          display: block;
-          text-align: left;
-      }
+    .dropdown-content a {
+      float: none;
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+      text-align: left;
+    }
 
-      .dropdown-content a:hover {
-          background-color: #ddd;
-      }
+    .dropdown-content a:hover {
+      background-color: #ddd;
+    }
 
-      .show {
-          display: block;
-      }
-
+    .show {
+      display: block;
+    }
   </style>
 
 </head>
 
 <body>
   <div class="navbar">
-      <div class="dropdown">
-          <button class="dropbtn" onclick="myFunction()">More Info
+    <div class="dropdown">
+      <button class="dropbtn" onclick="myFunction()">More Info
     <i class="fa fa-caret-down"></i>
   </button>
-          <div class="dropdown-content" id="myDropdown">
-              <a href="https://vivmokona.github.io/des157/proto2/index.html">Home</a>
-              <a href="https://fxtzhou.github.io/des157/projects/final/index.html">About</a>
-              <a class="active" href="#">Profile</a>
-              <a href="#contact">Contact</a>
-          </div>
+      <div class="dropdown-content" id="myDropdown">
+        <a href="https://vivmokona.github.io/des157/proto2/index.html">Home</a>
+        <a href="https://fxtzhou.github.io/des157/projects/final/index.html">About</a>
+        <a class="active" href="#">Profile</a>
+        <a href="#contact">Contact</a>
       </div>
+    </div>
   </div>
 
   <section>
     <div class="profile">
-    <img src="photos/vivian.jpg" width="200px">
-    <h1>Vivian Luu</h1>
-    <h2>Graphic Design</h2>
-    <h2>95135</h2>
-    <h2><a href="www.vivluu.com"> Portfolio</a>
-    <h2><a href="www.instagram.com/vibrantventurer"> <i class="fab fa-instagram"></i></a></h2>
-  </div>
+      <img src="photos/vivian.jpg" width="200px">
+      <h1>Vivian Luu</h1>
+      <h2>Graphic Design</h2>
+      <h2>95135</h2>
+      <h2><a href="https://www.vivluu.com"> Portfolio</a>
+    <h2><a href="https://www.instagram.com/vibrantventurer"> <i class="fab fa-instagram"></i></a></h2>
+    </div>
 
-  <article>
-    <h3>What intrigued you to Design & why did you choose the field you are in now?</h3>
-    <p>The ability to be creative while also getting the chance to solve problems in which I can help others! I chose this field because I didn't know what career path I wanted to pursue when I first began college. Eventually through some trial and error I found design to be a field that I really enjoyed and actually saw myself pursing for the rest of my life.</p>
+    <article>
+      <h3>What intrigued you to Design & why did you choose the field you are in now?</h3>
+      <p>The ability to be creative while also getting the chance to solve problems in which I can help others! I chose this field because I didn't know what career path I wanted to pursue when I first began college. Eventually through some trial and error
+        I found design to be a field that I really enjoyed and actually saw myself pursing for the rest of my life.</p>
 
-    <h3>What have been your biggest struggles of your career?</h3>
-    <p>I think the biggest struggle has been building up the skills to become a designer. School only taught me so much, and it has mostly been a learn-as-you go and when you're on the job type of thing. Another struggle that is up-and-coming is actually finding satisfaction in my job, I am wondering if I would ever change career paths because sometimes graphic design isn't as satisfying as I don't feel like I am creating a big impact through my graphics.</p>
+      <h3>What have been your biggest struggles of your career?</h3>
+      <p>I think the biggest struggle has been building up the skills to become a designer. School only taught me so much, and it has mostly been a learn-as-you go and when you're on the job type of thing. Another struggle that is up-and-coming is actually
+        finding satisfaction in my job, I am wondering if I would ever change career paths because sometimes graphic design isn't as satisfying as I don't feel like I am creating a big impact through my graphics.</p>
 
-    <h3>What have your experiences been like as a person of color in the design industry? Does those experiences shape how you solve design-related problems?</h3>
-    <p>As a person of color I've been fortune enough to have others support me, but I have experienced racism and discrimination just being who I am. Such as under-selling myself and having others be skeptical of my skill sets. These experiences have taken me aback, but with this I learn to be more empathetic to those who have it tougher than me. It definitely has made me a more resilient human being and even shapes the way I think, act, and design.</p>
+      <h3>What have your experiences been like as a person of color in the design industry? Does those experiences shape how you solve design-related problems?</h3>
+      <p>As a person of color I've been fortune enough to have others support me, but I have experienced racism and discrimination just being who I am. Such as under-selling myself and having others be skeptical of my skill sets. These experiences have taken
+        me aback, but with this I learn to be more empathetic to those who have it tougher than me. It definitely has made me a more resilient human being and even shapes the way I think, act, and design.</p>
 
-    <h3>How can design be more accommodating to underrepresented populations of people?</h3>
-    <p>Design can be more accommodating by providing equitable opportunities. I am talking about job opportunities. Yes there may be equal opportunities, but people of different backgrounds may not have received the same level of education or funding to achieve a certain level of work. Employers should not just ignore someone for their lack of ability, instead employers should learn about one's background and see that they have a potential to grow as a way of decision-making. Any field of design should make an effort to include more people of different backgrounds for user-testing and when it comes to solving a design problem. Like factor in qualities like how they grew up, their class, ethnicity, any disabilities, age, gender, their struggles, etc, to have better inclusive design.</p>
+      <h3>How can design be more accommodating to underrepresented populations of people?</h3>
+      <p>Design can be more accommodating by providing equitable opportunities. I am talking about job opportunities. Yes there may be equal opportunities, but people of different backgrounds may not have received the same level of education or funding to
+        achieve a certain level of work. Employers should not just ignore someone for their lack of ability, instead employers should learn about one's background and see that they have a potential to grow as a way of decision-making. Any field of design
+        should make an effort to include more people of different backgrounds for user-testing and when it comes to solving a design problem. Like factor in qualities like how they grew up, their class, ethnicity, any disabilities, age, gender, their
+        struggles, etc, to have better inclusive design.</p>
     </article>
-</section>
+  </section>
 
 
 
@@ -132,21 +137,20 @@
 
 
   <script>
-      /* When the user clicks on the button, toggle between hiding and showing the dropdown content */
-      function myFunction() {
-          document.getElementById("myDropdown").classList.toggle("show");
-      }
+    /* When the user clicks on the button, toggle between hiding and showing the dropdown content */
+    function myFunction() {
+      document.getElementById("myDropdown").classList.toggle("show");
+    }
 
-      // Close the dropdown if the user clicks outside of it
-      window.onclick = function(e) {
-          if (!e.target.matches('.dropbtn')) {
-              var myDropdown = document.getElementById("myDropdown");
-              if (myDropdown.classList.contains('show')) {
-                  myDropdown.classList.remove('show');
-              }
-          }
+    // Close the dropdown if the user clicks outside of it
+    window.onclick = function(e) {
+      if (!e.target.matches('.dropbtn')) {
+        var myDropdown = document.getElementById("myDropdown");
+        if (myDropdown.classList.contains('show')) {
+          myDropdown.classList.remove('show');
+        }
       }
-
+    }
   </script>
 
 </body>
