--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li><a href="projects/audience-test.html">Audience Test</a></li>
           <li><a href="projects/final/welcome.html">Audience Landing Page</a></li>
           <li><a href="projects/final/index.html">Final</a></li>
-          <li><a href="projects/final/presentation.pdf">Presentation</a></li>
+          <li><a href="projects/presentation.pdf">Presentation</a></li>
 
         </ul>
       </nav>
