--- a/projects/final/index.html
+++ b/projects/final/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>great title here</title>
+	<title>Designers of Color Map</title>
 	<meta name="viewport" content="width=device-width , initial-scale= 1.0">
 	<link href="https://cdn.jsdelivr.net/npm/normalize.css@7.0.0/normalize.min.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400:700|Rock+Salt" rel="stylesheet">
