--- a/projects/final/index.html
+++ b/projects/final/index.html
@@ -13,28 +13,95 @@
 	<link href='onepage-scroll.css' rel='stylesheet' type='text/css'>
 	<script src="canvasjs.min.js"></script>
 	<link href='styles.css' rel='stylesheet'>
+<style>
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
 
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+#main {
+    position: absolute;
+    top: -15px;
+    right: 0;
+    transition: margin-left .5s;
+    padding: 16px;
+}
+
+/*Changes inside nav*/
+
+@media screen and (max-height: 450px) {
+    .sidenav {
+        padding-top: 15px;
+    }
+    .sidenav a {
+        font-size: 18px;
+    }
+}
+</style>
 </head>
 
 <body>
-	<a href="index.html"><img style="position: fixed; left: 20px; "src="images/logo.png" alt="logo" width="50"></a>
+	<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a class="active" href="https://vivmokona.github.io/des157/final/index.html">Home</a>
+   <a href="https://fxtzhou.github.io/des157/projects/final/index.html">About</a>
+  <a href="profile/form.html">Profile</a>
+  <a href="contact/index.html">Contact</a>
+</div>
 
-<div id="container">
-	<section style="  border-right: 3px #fff solid; min-width: 50%;">
-		<h1>According to AIGA, 60% of Design is <span>White</span>.</h1>
-	</section>
+<div id="main">
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+</div>
 
-<section style="margin-left: 100px;">
-	<h3>People from all walks of life are designing change for the world today.<br>
+	<a href="index.html"><img style="position: fixed; left: 20px; "src="images/logo.png" alt="logo" width="50"><h4>Designers of Color</h4></a>
+
+	<div id="container">
+		<section style="  border-right: 3px #fff solid; max-width: 50%; ">
+			<h1>According to AIGA, 60% of Design is <span>White</span>.</h1>
+		</section>
+
+		<section id="blurb">
+			<h3>People from all walks of life are designing change for the world today.<br>
 	We need <span>you</span> to share your story with us.
 Make a statement by placing yourself on the map based on your location.<br>
 <span>You and your dot are special.</span>
 We will use it to showcase your work and story.</h3>
-<a href="https://designcensus.org/" target="_blank" style="margin-top: 25px; width: 1.5in; text-decoration: none;  border: 2px #fff solid;">Learn More at AIGA</a>
-	<a href="https://vivmokona.github.io/des157/final/index.html" style="margin-top: 25px; width: 1.5in; margin-left: 100px; text-decoration: none;  border: 2px #fff solid;">Go to Map</a>
-</section>
 
-</div>
+			<a id="mainlinks" href="https://designcensus.org/" target="_blank" >Learn More at AIGA</a>
+			<a id="mainlinks" href="https://vivmokona.github.io/des157/final/index.html">Go to Map</a>
+
+		</section>
+
+	</div>
 	<footer>
 		<a href="">About</a>
 		<a href="https://vivmokona.github.io/des157/final/contact/index.html">Contact</a>
@@ -43,6 +110,13 @@ We will use it to showcase your work and story.</h3>
 		<a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
 	</footer>
 	<script>
+	function openNav() {
+    document.getElementById("mySidenav").style.width = "250px";
+}
+
+function closeNav() {
+    document.getElementById("mySidenav").style.width = "0";
+}
 		onePageScroll(".main", {
 			sectionContainer: "section",
 			loop: true,
