--- a/projects/final/linh.html
+++ b/projects/final/linh.html
@@ -10,87 +10,77 @@
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   <link href='pagestyles.css' rel='stylesheet'>
   <style>
-      .navbar {
-          overflow: hidden;
-          background-color: #333;
-          font-family: 'Roboto', Helvetica, sans-serif;
-      }
+  /* Hamburger Nav */
 
-      .navbar a {
-          float: left;
-          font-size: 16px;
-          color: white;
-          text-align: center;
-          padding: 7px 16px;
-          text-decoration: none;
-      }
+  .sidenav {
+      height: 100%;
+      width: 0;
+      position: fixed;
+      z-index: 1;
+      top: 0;
+      right: 0;
+      background-color: #111;
+      overflow-x: hidden;
+      transition: 0.5s;
+      padding-top: 60px;
+  }
 
-      .dropdown {
-          float: right;
-          overflow: hidden;
-      }
+  .sidenav a {
+      padding: 8px 8px 8px 32px;
+      text-decoration: none;
+      font-size: 25px;
+      color: #818181;
+      display: block;
+      transition: 0.3s;
+  }
 
-      .dropdown .dropbtn {
-          cursor: pointer;
-          font-size: 16px;
-          border: none;
-          outline: none;
-          color: white;
-          padding: 10px 12px;
-          background-color: inherit;
-          font-family: inherit;
-          margin: 0;
-      }
+  .sidenav a:hover {
+      color: #f1f1f1;
+  }
 
-      .navbar a:hover,
-      .dropdown:hover .dropbtn,
-      .dropbtn:focus {
-          background-color: skyblue;
-      }
+  .sidenav .closebtn {
+      position: absolute;
+      top: 0;
+      right: 25px;
+      font-size: 36px;
+      margin-left: 50px;
+  }
 
-      .dropdown-content {
-          display: none;
-          position: absolute;
-          background-color: #f9f9f9;
-          min-width: 160px;
-          box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-          z-index: 1;
-      }
+  #main {
+      position: absolute;
+      top: -15px;
+      right: 0;
+      transition: margin-left .5s;
+      padding: 16px;
+  }
 
-      .dropdown-content a {
-          float: none;
-          color: black;
-          padding: 12px 16px;
-          text-decoration: none;
-          display: block;
-          text-align: left;
-      }
+  /*Changes inside nav*/
 
-      .dropdown-content a:hover {
-          background-color: #ddd;
+  @media screen and (max-height: 450px) {
+      .sidenav {
+          padding-top: 15px;
       }
-
-      .show {
-          display: block;
+      .sidenav a {
+          font-size: 18px;
       }
+  }
 
   </style>
 </head>
 
 <body>
-  <div class="navbar">
-      <div class="dropdown">
-          <button class="dropbtn" onclick="myFunction()">More Info
-    <i class="fa fa-caret-down"></i>
-  </button>
-          <div class="dropdown-content" id="myDropdown">
-              <a href="https://vivmokona.github.io/des157/proto2/index.html">Home</a>
-              <a href="https://fxtzhou.github.io/des157/projects/final/index.html">About</a>
-              <a class="active" href="#">Profile</a>
-              <a href="#contact">Contact</a>
-          </div>
-      </div>
+  <div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a class="active" href="https://vivmokona.github.io/des157/final/index.html">Home</a>
+   <a href="https://fxtzhou.github.io/des157/projects/final/index.html">About</a>
+  <a href="profile/form.html">Profile</a>
+  <a href="contact/index.html">Contact</a>
   </div>
+
+  <div id="main">
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+  </div>
+
   <section>
     <div class="profile">
     <img src="photos/linh.jpg" width="200px">
@@ -118,21 +108,13 @@
 </section>
 
 <script>
-    /* When the user clicks on the button, toggle between hiding and showing the dropdown content */
-    function myFunction() {
-        document.getElementById("myDropdown").classList.toggle("show");
-    }
+function openNav() {
+   document.getElementById("mySidenav").style.width = "250px";
+}
 
-    // Close the dropdown if the user clicks outside of it
-    window.onclick = function(e) {
-        if (!e.target.matches('.dropbtn')) {
-            var myDropdown = document.getElementById("myDropdown");
-            if (myDropdown.classList.contains('show')) {
-                myDropdown.classList.remove('show');
-            }
-        }
-    }
-
+function closeNav() {
+   document.getElementById("mySidenav").style.width = "0";
+}
 </script>
 
   <footer>
